--- a/install
+++ b/install
@@ -43,6 +43,22 @@ install_home () {
 	)
 }
 
+install_local_bin () {
+	while IFS= read -r pkg;
+	do
+		local pkg_dst="${pkg##*/}"
+		pkg_dst="$HOME/.local/bin/${pkg_dst/dot-/.}"
+		if [ ! -f "$pkg_dst" ]; then
+			pkg_src="$(realpath --relative-to="$HOME/.local/bin/" "$pkg")"
+			link_msg "${pkg#"$PWD/"}" "${pkg_dst/"$HOME"/'~'}"
+			link "$pkg_src" "$pkg_dst"
+		fi
+	done < <( \
+		find "$PWD/dot-local/bin" -maxdepth 1 -type f -printf "%p\n" \
+		| sort
+	)
+}
+
 install_config () {
 	while IFS= read -r pkg;
 	do
@@ -133,6 +149,7 @@ install_sshconfig () {
 }
 
 install_home
+install_local_bin
 install_config
 link_vimrc
 install_sshconfig
